// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DummyComponent render Blue option 1`] = `
<option>
  Blue
</option>
`;

exports[`DummyComponent render Green option 1`] = `
<option>
  Green
</option>
`;

exports[`DummyComponent render Red option 1`] = `
<option>
  Red
</option>
`;
